tests/baselines/reference/directReferenceToNull.errors.txt
==== tests/cases/compiler/directReferenceToNull.ts (1 errors) ====
    var x: Null;
           ~~~~
!!! directReferenceToNull.ts(1,8): error TS2095: Could not find symbol 'Null'.